--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.0.24",
     "graphql": "^16.8.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
   },
