--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.8.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
