--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "apollo-server-express": "^3.13.0"
+    "apollo-server-express": "^3.13.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
