added .env file, corrected schemas files to work with admin model, server, index and database

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-server-express": "^3.13.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
+    "graphql-scalars": "^1.23.0",
     "mongoose": "^8.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
