--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,8 @@
+
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "seed": "node seeds/seed.js",
-    "watch": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.7.1",
+    "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
-    "express": "^4.19.2",
-    "graphql": "^16.8.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
+    "jsonwebtoken": "^9.0.2"
   }
 }
