--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
     "frontend": "vite"
-
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +18,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.10",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.8.1"
   }
 }
