--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
     "frontend": "vite"
-
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0"
+  },
+  "dependencies": {
+    "apollo-server-express": "^3.13.0"
   }
 }
