--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.3.0",
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "@apollo/client": "^3.9.10",
