--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@apollo/server": "^4.7.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
