--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apollo/client": "^3.9.10",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "jwt-decode": "^4.0.0"
   }
 }
